--- a/src/app/jump/jump.component.scss
+++ b/src/app/jump/jump.component.scss
@@ -1,1 +1,6 @@
 @import "../app.component.scss";
+
+.current {
+    pointer-events: none;
+    opacity: 0.2;
+}
